--- a/viewanimation/src/main/res/anim/rotate.xml
+++ b/viewanimation/src/main/res/anim/rotate.xml
@@ -2,10 +2,16 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <rotate
         android:fromDegrees="0"
-        android:toDegrees="-45"
-        android:toYScale="0.0"
+        android:toDegrees="360"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:duration="1400" />
+
+    <rotate
+        android:fromDegrees="360"
+        android:toDegrees="0"
         android:pivotX="50%"
         android:pivotY="50%"
         android:startOffset="700"
-        android:duration="400" />
+        android:duration="2000" />
 </set>
