--- a/notepad/src/main/res/layout/activity_main2.xml
+++ b/notepad/src/main/res/layout/activity_main2.xml
@@ -25,7 +25,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView3"
