--- a/np/src/main/res/layout/activity_main.xml
+++ b/np/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
+        android:numColumns="2"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="5dp" />
 
