--- a/notepadapp/src/main/res/layout/activity_add.xml
+++ b/notepadapp/src/main/res/layout/activity_add.xml
@@ -12,68 +12,76 @@
         android:id="@+id/edtName"
         android:layout_width="0dp"
         android:layout_height="44dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
+        android:hint="Enter file name"
         android:ems="10"
         android:inputType="textPersonName"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         android:layout_marginEnd="28dp"
         app:layout_constraintRight_toRightOf="@+id/edtData"
+        android:layout_marginTop="8dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="28dp" />
+
+
 
     <EditText
         android:id="@+id/edtData"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:hint=" start typing"
         android:ems="10"
         android:gravity="top"
-        android:hint="Start Typing.."
         android:inputType="textPersonName"
-        android:layout_marginTop="5dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/imgBack"
         android:layout_marginStart="2dp"
         android:layout_marginEnd="2dp"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/edtName"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="11dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp" />
 
-
     <ImageView
-        android:id="@+id/imgSave2"
-        android:layout_width="63dp"
-        android:layout_height="65dp"
-        android:layout_marginRight="55dp"
-        android:layout_marginTop="23dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtData"
-        app:srcCompat="@drawable/ic_check_black_24dp"
-        android:layout_marginEnd="55dp" />
-
-    <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgBack"
         android:layout_width="63dp"
         android:layout_height="65dp"
         app:srcCompat="@drawable/ic_chevron_left_black_24dp"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="113dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="85dp"
+        android:layout_marginBottom="16dp"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginEnd="117dp"
+        app:layout_constraintRight_toRightOf="@+id/imgSave"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="4dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="70dp" />
+        android:layout_marginLeft="113dp"
+        android:layout_marginRight="117dp"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+
+    <ImageView
+        android:id="@+id/imgSave"
+        android:layout_width="63dp"
+        android:layout_height="65dp"
+        app:srcCompat="@drawable/ic_check_black_24dp"
+        android:layout_marginEnd="91dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="91dp" />
+
+
 
 </android.support.constraint.ConstraintLayout>
