--- a/notepadapp/src/main/res/layout/activity_main.xml
+++ b/notepadapp/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <GridView
-        android:id="@+id/grdLayout"
+        android:id="@+id/grdView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
